# barc

django-poc/: docker-compose.yml  makefile  pyproject.toml
django-poc/barc/: asgi.py  settings.py  urls.py  wsgi.py
django-poc/barc_auth/: apps.py  authentication.py  serializers.py  urls.py  views.py
django-poc/barc_auth/migrations/: 0001_initial.py
django-poc/booking/: admin.py  models.py  serializers.py  urls.py  views.py
django-poc/booking/migrations/: 0001_initial.py
fastapi-poc/: .gitignore  alembic.ini  create_user.py  docker-compose.yml  dockerfile  makefile  pyproject.toml
fastapi-poc/alembic/: env.py
fastapi-poc/alembic/versions/: aa2f72b7ff7a_initial_database.py
fastapi-poc/barc/: dependencies.py  main.py  settings.py
fastapi-poc/barc/appointment/domain/: appointment.py  appointment_repository.py
fastapi-poc/barc/appointment/infrastructure/: routers.py  sqlalchemy_appointment.py  sqlalchemy_appointment_repository.py
fastapi-poc/barc/auth/: argon2_password_service.py  dependencies.py  jwt_serializer.py  password_service.py  routers.py
fastapi-poc/barc/barber/domain/: barber.py  barber_repository.py  time_of_day.py  time_range.py
fastapi-poc/barc/barber/infrastructure/: routers.py  (+3 more)
next-poc/: .env  db.json  jest.config.ts  package-lock.json  package.json
next-poc/src/: appointment.ts  auth.ts  barber.ts  middleware.ts  request.ts  response.ts  service.ts  time-range.ts  time.ts
next-poc/src/app/: booking.tsx  globals.css  home-component.tsx  layout.tsx  page.tsx  types.ts
next-poc/src/tests/: time-range.spec.ts  time.spec.ts
(+38 files in other folders)
